<resources>
    <string name="app_name">TicTacToe</string>
    <string name="choose_player">Choose Player</string>
    <string name="player_one_title">Player 1 (X)</string>
    <string name="player_two_title">Player 2 (O)</string>
    <string name="enter_players_name">Enter Players Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">player name</string>
    <string name="play_now">PLAY NOW</string>
    <string name="player">Player</string>
    <string name="wins">Wins</string>
    <string name="draws">Draws</string>
    <string name="player_x_turn">Player X Turn</string>
    <string name="number_zero">0</string>


</resources>