<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseFragment">
    <TableLayout
        android:id="@+id/tl_enter_player_names"
        android:imeOptions="actionDone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <TableRow
            android:background="#009688"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/enter_players_name"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="20sp"
            />
        </TableRow>
        <TableRow
            android:background="#B2BEB5">
            <TextView
                android:id="@+id/txt_player_one_title"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/player_one_title"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/txt_player_one_value"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:hint="@string/player_name"
                android:padding="5dp"
                android:layout_weight="4"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:background="#B2BEB5">
            <TextView
                android:id="@+id/txt_player_two_title"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/player_two_title"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/txt_player_two_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:hint="@string/player_name"
                android:padding="5dp"
                android:textColor="#000" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btn_play_now"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/play_now"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tl_enter_player_names"
        android:textSize="16sp"
        android:backgroundTint="#009688"
        />

</RelativeLayout>