<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToeFragment">

    <TableLayout
        android:id="@+id/tl_stat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tl_stat"
        app:layout_constraintTop_toTopOf="parent"
        >
    <TableRow
        android:background="#009688"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/player"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/wins"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/draws"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/draws"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:textSize="20sp" />
    </TableRow>
        <TableRow
            android:background="#B2BEB5">
            <TextView
                android:id="@+id/txt_player_one_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/player_one_title"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/txt_player_one_score"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/number_zero"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/txt_player_one_draws"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/number_zero"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:background="#B2BEB5">
            <TextView
                android:id="@+id/txt_player_two_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/player_two_title"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/txt_player_two_score"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/number_zero"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt_player_two_draws"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/number_zero"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tl_tic_tac_toe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tl_stat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                android:layout_marginEnd="5dp"
                />

            <Button
                android:id="@+id/button2"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                android:layout_marginEnd="5dp"
                />

            <Button
                android:id="@+id/button3"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:textSize="20sp"
                android:text="" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                android:layout_marginEnd="5dp"
                />

            <Button
                android:id="@+id/button5"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/button6"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                android:layout_marginEnd="5dp"
                />

            <Button
                android:id="@+id/button8"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/button9"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_weight="1"
                android:width="100dp"
                android:text=""
                android:textSize="20sp"
                />

        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/txt_player_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_x_turn"
        app:layout_constraintTop_toBottomOf="@id/tl_tic_tac_toe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>